tests/paczka1/fuzzy1/43049168.err
Error in line 25: GJt9b S192 60,9
Error in line 21: qHH7QLwli S368 52,7
Error in line 26: GJt9b A446 87,6
Error in line 31: GJt9b S267 30,0
Error in line 34: GJt9b S192 37,5
Error in line 37: qHH7QLwli S267 62,4
